v0.2.4-1
smoothed gameviewport moving
made gameviewport move faster
added ability to queue moving
added hud frame
fixed a bug where the vm args didnt get applied
modified vm args
fixed a bug where the replay buffered writer never got flushed